@@ -1,22 +1,22 @@
-Entwicklung der switch expressions von Java 11 bis Java 21
+# Entwicklung der *switch expressions* von Java 11 bis Java 21
 
-Die switch-Syntax hat sich von Java 11 bis Java 21 erheblich weiterentwickelt:
-von einer rein imperativen Kontrollstruktur hin zu einem modernen, ausdrucksstarken Pattern-Matching-Mechanismus.
+Die `switch`-Syntax hat sich zwischen Java 11 und Java 21 stark
+weiterentwickelt --- von einer rein imperativen Kontrollstruktur hin zu
+einem mächtigen Pattern-Matching-Mechanismus.
 
-Im Folgenden findest du die Entwicklung chronologisch, inklusive Beispielen und Kernänderungen — vollständig im Markdown-Format.
+------------------------------------------------------------------------
 
-Java 11 und älter – klassischer switch (nur Statement)
+## Java 11 und älter -- Klassischer `switch` (**nur Statement**)
 
-switch kann nur ein Statement sein, nie ein Ausdruck.
+**Eigenschaften:**
 
-Kein Rückgabewert möglich.
+-   `switch` ist **kein Ausdruck**, liefert also keinen Wert.
+-   **Fallthrough** ist Standard → `break` zwingend.
+-   Keine kompakten Case-Labels möglich.
 
-Fallthrough ist Standard → break zwingend notwendig.
+**Beispiel:**
 
-Mehrere Case-Labels nicht in einer Zeile nutzbar.
-
-Beispiel (Java 11):
-
+``` java
 int numLetters;
 switch (day) {
     case MONDAY:
@@ -30,74 +30,63 @@ switch (day) {
     default:
         numLetters = 8;
 }
+```
 
-Java 12 – switch expressions (Preview #1, JEP 325)
+------------------------------------------------------------------------
 
-Java 12 führt die switch-Expression testweise ein:
+## Java 12 -- Switch Expressions (Preview 1)
 
-🆕 Wichtige Neuerungen
+**Neuerungen:**
 
-switch kann Expression oder Statement sein.
+-   `switch` kann **Expression** sein.
+-   **Arrow-Cases** ohne Fallthrough.
+-   Mehrere Labels pro Case: `case A, B ->`
+-   Rückgabewerte direkt möglich.
+-   Blockarme nutzen noch `break value`.
 
-Neue Syntax: case A, B -> ohne Fallthrough.
+**Beispiel:**
 
-Ergebniswert kann direkt zugewiesen werden:
-
+``` java
 int numLetters = switch (day) {
     case MONDAY, FRIDAY, SUNDAY -> 6;
     case TUESDAY -> 7;
     default -> 8;
 };
+```
 
+------------------------------------------------------------------------
 
-In Block-Armen durfte man damals break value verwenden (nur in diesem Preview):
+## Java 13 -- Switch Expressions (Preview 2)
 
-int r = switch (day) {
-    case WEDNESDAY -> {
-        int len = day.toString().length();
-        break len;  // nur in Java 12!
-    }
-    default -> 0;
-};
+### Änderung:
 
+-   `break value` wird ersetzt durch **`yield`**.
 
-Nur mit --enable-preview nutzbar.
+**Beispiel:**
 
-Java 13 – switch expressions (Preview #2, JEP 354)
-
-Java 13 ersetzt break value durch yield, eine semantisch klarere Form.
-
-🆕 Wesentliche Änderung
-
-yield gibt den Wert einer switch-Expression aus einem Block zurück.
-
-Beispiel:
-
+``` java
 int result = switch (day) {
     case MONDAY -> 0;
     case TUESDAY -> 1;
     default -> {
         int temp = compute(day);
-        yield temp;   // ersetzt break value
+        yield temp;
     }
 };
+```
 
-Java 14 – switch expressions werden final (JEP 361)
+------------------------------------------------------------------------
 
-Ab Java 14 ist die Funktionalität Standardbestandteil der Sprache.
+## Java 14 -- Finalisierung der switch expressions
 
-✨ Was ist jetzt endgültig festgelegt?
+-   `switch` Expressions sind jetzt **offiziell Teil der Sprache**.
+-   Arrow-Syntax ist final.
+-   Blockarme nutzen zwingend `yield`.
+-   Expressions müssen exhaustiv sein.
 
-switch kann Expression oder Statement sein.
+**Beispiel:**
 
-Pfeil-Syntax case X -> ist voll unterstützt.
-
-Block-Arme verwenden immer yield, nie break value.
-
-switch-Expressions müssen exhaustiv sein (müssen alle Fälle abdecken).
-
-Beispiel (gültig ab Java 14, heute Standard):
-
+``` java
 int numLetters = switch (day) {
     case MONDAY, FRIDAY, SUNDAY -> 6;
     case TUESDAY -> 7;
@@ -107,34 +96,23 @@ int numLetters = switch (day) {
     }
     default -> 8;
 };
+```
 
+------------------------------------------------------------------------
 
-Java 14 schließt die grundlegende Modernisierung des switch ab.
-Spätere Versionen erweitern switch hauptsächlich durch Pattern Matching.
+## Java 17--20 -- Pattern Matching Previews
 
-Java 17–20 – Vorbereitung des Pattern Matching für switch (Preview-Phasen)
+-   Typ-Patterns in `switch`
+-   Record-Destructuring
+-   `when` Guards
 
-In diesen Versionen bleiben die switch expressions stabil, aber Java fügt neue Fähigkeiten hinzu:
+------------------------------------------------------------------------
 
-🧩 Neue Features in Previews
+## Java 21 -- Finales Pattern Matching for switch
 
-Typ-Patterns in switch (z. B. case String s ->)
+**Beispiel:**
 
-Guards (when-Klauseln)
-
-Umgang mit null in Pattern-Switches
-
-Diese Phasen sind rein vorbereitend für Java 21.
-
-Java 21 – Pattern Matching for switch wird final (JEP 441)
-
-Mit Java 21 wird das switch-System vollständig generalisiert:
-
-switch kann jetzt über Typen, Records und komplexe Patterns matchen.
-
-Ideal in Kombination mit sealed Klassen und Records.
-
-Beispiel (Java 21, final):
+``` java
 static String describe(Object obj) {
     return switch (obj) {
         case null -> "null";
@@ -145,10 +123,9 @@ static String describe(Object obj) {
         default -> "Unbekannter Typ";
     };
 }
+```
 
-
-Mit Records:
-
+``` java
 record Point(int x, int y) {}
 
 String desc = switch (p) {
@@ -156,3 +133,202 @@ String desc = switch (p) {
     case Point(int x, int y) -> "Point(" + x + "," + y + ")";
     default -> "Other";
 };
+```
+
+------------------------------------------------------------------------
+
+## Zusammenfassung
+
+  Java-Version   Status          Änderungen
+  -------------- --------------- --------------------------------------------------
+  11             Nur Statement   kein Wert, Fallthrough
+  12             Preview         erste Expressions, `case A, B ->`, `break value`
+  13             Preview         Einführung `yield`
+  14             Final           switch Expressions final
+  17--20         Preview         Pattern Matching
+  21             Final           Pattern Matching for switch
+
+  # Was kann alles in `case` verarbeitet werden? (Java 21)
+
+Hier findest du eine vollständige Übersicht darüber, was in Java 21 in
+`switch`-Case-Labels erlaubt ist -- inklusive klassischer Werte, neuer
+Pattern-Matching-Funktionen und aller syntaktischen Regeln.
+
+------------------------------------------------------------------------
+
+## 1. Konstante Werte (klassisch)
+
+`case` kann konstante Werte prüfen:
+
+-   Ganzzahlen (`int`, `byte`, `short`, `char`)
+-   `String`-Konstanten
+-   `enum`-Konstanten
+-   Compile-Time-Constant-Ausdrücke
+
+**Beispiel:**
+
+``` java
+switch (n) {
+    case 1:
+        ...
+    case 2:
+        ...
+    case 10 * 2:
+        ...
+}
+```
+
+------------------------------------------------------------------------
+
+## 2. Mehrere Werte pro Case
+
+Seit Java 12 möglich:
+
+``` java
+case MONDAY, FRIDAY, SUNDAY -> ...
+```
+
+------------------------------------------------------------------------
+
+## 3. Arrow-Cases (`->`)
+
+Moderne, fallthrough-freie Syntax:
+
+``` java
+case 1 -> "One";
+case 2 -> "Two";
+```
+
+------------------------------------------------------------------------
+
+## 4. default-Case
+
+Standardfall:
+
+``` java
+default -> "Unknown";
+```
+
+------------------------------------------------------------------------
+
+## 5. Type Patterns
+
+Java 21 erlaubt Typprüfungen im switch:
+
+``` java
+case String s -> "String: " + s;
+case Number n -> "Number: " + n;
+```
+
+------------------------------------------------------------------------
+
+## 6. Record Patterns
+
+Case kann Records entpacken:
+
+``` java
+record Point(int x, int y) {}
+case Point(int x, int y) -> "X=" + x + ", Y=" + y;
+```
+
+Auch verschachtelt:
+
+``` java
+case Point(int x, Point(int y, int z)) -> ...
+```
+
+------------------------------------------------------------------------
+
+## 7. null-Case
+
+Java 21 erlaubt explizite Null-Prüfung:
+
+``` java
+case null -> "Null value";
+```
+
+Regeln:
+
+-   Steht **vor** allen Typ-Patterns.
+-   Fehlt `case null`, fängt `default` den Nullfall ab.
+
+------------------------------------------------------------------------
+
+## 8. Guards (`when`)
+
+Bedingte Pattern:
+
+``` java
+case Integer i when i > 0 -> "Positive";
+case Integer i when i == 0 -> "Zero";
+case Integer i -> "Negative";
+```
+
+------------------------------------------------------------------------
+
+## 9. Case-Blöcke mit `yield`
+
+Nur in switch-Expressions erlaubt:
+
+``` java
+case 1 -> {
+    int r = compute();
+    yield r;
+}
+```
+
+------------------------------------------------------------------------
+
+## 10. Exhaustiveness
+
+Eine switch-Expression muss vollständig sein.
+
+Bei sealed classes erkennt der Compiler das automatisch:
+
+``` java
+sealed interface Shape permits Circle, Square, Rectangle {}
+
+switch (shape) {
+    case Circle c -> ...
+    case Square s -> ...
+    case Rectangle r -> ...
+}
+```
+
+Kein `default` nötig.
+
+------------------------------------------------------------------------
+
+# Übersichtstabelle
+
+  Art des Case-Labels   Beispiel                     Seit
+  --------------------- ---------------------------- ------------------
+  Konstante Werte       `case 1:`                    immer
+  Mehrere Werte         `case A, B ->`               Java 12
+  Arrow-Syntax          `case X ->`                  Java 12
+  default               `default ->`                 immer
+  Type Patterns         `case String s ->`           final in Java 21
+  Record Patterns       `case Point(int x, int y)`   final in Java 21
+  null                  `case null ->`               Java 21
+  Guards                `case X when cond`           Java 21
+  yield-Blöcke          `case X -> { yield v; }`     final in Java 14
+
+------------------------------------------------------------------------
+
+# Zusammenfassung
+
+Ein `case` kann in Java 21 Folgendes verarbeiten:
+
+-   Konstante Werte
+-   Mehrere Werte pro Case
+-   Arrow-Labels
+-   default
+-   Type Patterns
+-   Record Patterns
+-   null
+-   Guards mit `when`
+-   Blockarme mit `yield`
+-   Sealed-Class-Exhaustiveness
+
+Damit zählt Java 21 zu den modernsten Pattern-Matching-Sprachen der JVM.
+
